--- a/config/database.yml
+++ b/config/database.yml
@@ -13,9 +13,9 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  host: localhost
+  username: <%= ENV.fetch("PORTFOLIO_DATABASE_USER") { "root" } %>
+  password: <%= ENV.fetch("PORTFOLIO_DATABASE_PASSWORD") { "" } %>
+  host: <%= ENV.fetch('PORTFOLIO_DATABASE_HOST') { '127.0.0.1' } %>
 
 development:
   <<: *default
