--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,31 +14,25 @@ jobs:
   test:
     runs-on: ubuntu-latest
     services:
-      postgres:
-        image: mysql:8
+      mysql:
+        image: mysql:8.0
         ports:
           - "3306:3306"
         env:
-          MYSQL_USER: root
-          MYSQL_PASSWORD: password
           MYSQL_DATABASE: portfolio_api_rails_test
+          MYSQL_ALLOW_EMPTY_PASSWORD: 1
+        options: --health-cmd "mysqladmin ping" --health-interval 20s --health-timeout 10s --health-retries 10
     env:
       RAILS_ENV: test
-      PORTFOLIO_DATABASE_HOST: "127.0.0.1"
-      PORTFOLIO_DATABASE_USER: root
-      PORTFOLIO_DATABASE_PASSWORD: password
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      # Add or replace dependency steps here
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
         with:
           bundler-cache: true
-      # Add or replace database setup steps here
       - name: Set up database schema
-        run: bin/rails db:schema:load
-      # Add or replace test runners here
+        run: bundle exec rails db:schema:load
       - name: Run tests
         run: bundle exec rspec
 
