--- a/rbs_collection.lock.yaml
+++ b/rbs_collection.lock.yaml
@@ -1,9 +1,4 @@
 ---
-sources:
-- name: ruby/gem_rbs_collection
-  remote: https://github.com/ruby/gem_rbs_collection.git
-  revision: main
-  repo_dir: gems
 path: ".gem_rbs_collection"
 gems:
 - name: actionmailer
@@ -11,7 +6,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actionpack
@@ -19,7 +14,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actionview
@@ -27,7 +22,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activejob
@@ -35,7 +30,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activemodel
@@ -43,7 +38,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activerecord
@@ -51,7 +46,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activestorage
@@ -59,7 +54,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activesupport
@@ -67,15 +62,15 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
-- name: ast
-  version: '2.4'
+- name: addressable
+  version: '2.8'
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: base64
@@ -86,12 +81,16 @@ gems:
   version: '0'
   source:
     type: stdlib
+- name: cgi
+  version: '0'
+  source:
+    type: stdlib
 - name: concurrent-ruby
   version: '1.1'
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: connection_pool
@@ -99,10 +98,26 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: date
+  version: '0'
+  source:
+    type: stdlib
+- name: dbm
+  version: '0'
+  source:
+    type: stdlib
+- name: dotenv-rails
+  version: '2.8'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: erb
   version: '0'
   source:
     type: stdlib
@@ -111,15 +126,39 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: faraday
+  version: '2.5'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: fileutils
+  version: '0'
+  source:
+    type: stdlib
+- name: forwardable
+  version: '0'
+  source:
+    type: stdlib
 - name: globalid
   version: '1.1'
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: google-protobuf
+  version: '3.22'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: i18n
@@ -127,14 +166,22 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: io-console
   version: '0'
   source:
     type: stdlib
-- name: json
+- name: jwt
+  version: '2.5'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: logger
   version: '0'
   source:
     type: stdlib
@@ -143,14 +190,26 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: minitest
   version: '0'
   source:
     type: stdlib
+- name: monitor
+  version: '0'
+  source:
+    type: stdlib
 - name: mutex_m
+  version: '0'
+  source:
+    type: stdlib
+- name: net-protocol
+  version: '0'
+  source:
+    type: stdlib
+- name: net-smtp
   version: '0'
   source:
     type: stdlib
@@ -159,31 +218,23 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
-- name: parallel
-  version: '1.20'
+- name: pstore
+  version: '0'
   source:
-    type: git
-    name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
-    remote: https://github.com/ruby/gem_rbs_collection.git
-    repo_dir: gems
-- name: parser
-  version: '3.2'
+    type: stdlib
+- name: psych
+  version: '0'
   source:
-    type: git
-    name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
-    remote: https://github.com/ruby/gem_rbs_collection.git
-    repo_dir: gems
+    type: stdlib
 - name: rack
   version: '2.2'
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rails-dom-testing
@@ -191,7 +242,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: railties
@@ -199,15 +250,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
-    remote: https://github.com/ruby/gem_rbs_collection.git
-    repo_dir: gems
-- name: rainbow
-  version: '3.0'
-  source:
-    type: git
-    name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rake
@@ -215,74 +258,10 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rdoc
-  version: '0'
-  source:
-    type: stdlib
-- name: regexp_parser
-  version: '2.8'
-  source:
-    type: git
-    name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
-    remote: https://github.com/ruby/gem_rbs_collection.git
-    repo_dir: gems
-- name: rubocop
-  version: '1.57'
-  source:
-    type: git
-    name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
-    remote: https://github.com/ruby/gem_rbs_collection.git
-    repo_dir: gems
-- name: rubocop-ast
-  version: '1.30'
-  source:
-    type: git
-    name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
-    remote: https://github.com/ruby/gem_rbs_collection.git
-    repo_dir: gems
-- name: thor
-  version: '1.2'
-  source:
-    type: git
-    name: ruby/gem_rbs_collection
-    revision: 25286c51a19927f28623aee3cd36655f902399ba
-    remote: https://github.com/ruby/gem_rbs_collection.git
-    repo_dir: gems
-- name: timeout
-  version: '0'
-  source:
-    type: stdlib
-- name: cgi
-  version: '0'
-  source:
-    type: stdlib
-- name: logger
-  version: '0'
-  source:
-    type: stdlib
-- name: monitor
-  version: '0'
-  source:
-    type: stdlib
-- name: singleton
-  version: '0'
-  source:
-    type: stdlib
-- name: time
-  version: '0'
-  source:
-    type: stdlib
-- name: tsort
-  version: '0'
-  source:
-    type: stdlib
-- name: tempfile
   version: '0'
   source:
     type: stdlib
@@ -290,15 +269,35 @@ gems:
   version: '0'
   source:
     type: stdlib
-- name: erb
+- name: singleton
+  version: '0'
+  source:
+    type: stdlib
+- name: tempfile
+  version: '0'
+  source:
+    type: stdlib
+- name: thor
+  version: '1.2'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 13ae8cd19056d62358a9d4836106b8b31219fc1e
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: time
+  version: '0'
+  source:
+    type: stdlib
+- name: timeout
+  version: '0'
+  source:
+    type: stdlib
+- name: tsort
   version: '0'
   source:
     type: stdlib
 - name: uri
-  version: '0'
-  source:
-    type: stdlib
-- name: fileutils
   version: '0'
   source:
     type: stdlib
